// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diffPackageJson > empty package.json > diffs 1`] = `
[
  {
    "from": undefined,
    "key": "main",
    "to": "./dist/index.cjs",
  },
  {
    "from": undefined,
    "key": "module",
    "to": "./dist/index.mjs",
  },
  {
    "from": undefined,
    "key": "types",
    "to": "./dist/index.d.ts",
  },
  {
    "key": "exports",
  },
  {
    "additions": [
      "css",
      "dist",
      "themes/apac",
    ],
    "key": "files",
  },
]
`;

exports[`diffPackageJson > empty package.json > package.json 1`] = `
{
  "exports": {
    ".": {
      "types": {
        "import": "./dist/index.d.mts",
        "require": "./dist/index.d.ts",
      },
      "import": "./dist/index.mjs",
      "require": "./dist/index.cjs",
    },
    "./css": {
      "types": {
        "import": "./dist/css.d.mts",
        "require": "./dist/css.d.ts",
      },
      "import": "./dist/css.mjs",
      "require": "./dist/css.cjs",
    },
    "./themes/apac": {
      "types": {
        "import": "./dist/themes/apac.d.mts",
        "require": "./dist/themes/apac.d.ts",
      },
      "import": "./dist/themes/apac.mjs",
      "require": "./dist/themes/apac.cjs",
    },
    "./package.json": "./package.json",
  },
  "main": "./dist/index.cjs",
  "module": "./dist/index.mjs",
  "types": "./dist/index.d.ts",
  "files": [
    "css",
    "dist",
    "themes/apac",
  ],
}
`;

exports[`diffPackageJson > incorrect package.json > exports missing > diffs 1`] = `
[
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > exports missing > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
  {
+   "exports": {
+     ".": {
+       "types": {
+         "import": "./dist/index.d.mts",
+         "require": "./dist/index.d.ts",
+       },
+       "import": "./dist/index.mjs",
+       "require": "./dist/index.cjs",
+     },
+     "./css": {
+       "types": {
+         "import": "./dist/css.d.mts",
+         "require": "./dist/css.d.ts",
+       },
+       "import": "./dist/css.mjs",
+       "require": "./dist/css.cjs",
+     },
+     "./themes/apac": {
+       "types": {
+         "import": "./dist/themes/apac.d.mts",
+         "require": "./dist/themes/apac.d.ts",
+       },
+       "import": "./dist/themes/apac.mjs",
+       "require": "./dist/themes/apac.cjs",
+     },
+     "./package.json": "./package.json",
+   },
    "main": "./dist/index.cjs",
`;

exports[`diffPackageJson > incorrect package.json > files missing > diffs 1`] = `
[
  {
    "additions": [
      "css",
      "dist",
      "themes/apac",
    ],
    "key": "files",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > files missing > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
    "types": "./dist/index.d.ts",
+   "files": [
+     "css",
+     "dist",
+     "themes/apac",
+   ],
  }
`;

exports[`diffPackageJson > incorrect package.json > files out of order > diffs 1`] = `
[
  {
    "additions": [],
    "key": "files",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > files out of order > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
    "files": [
+     "css",
      "dist",
      "themes/apac",
-     "css",
    ],
`;

exports[`diffPackageJson > incorrect package.json > keys out of order > diffs 1`] = `
[
  {
    "key": "order",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > keys out of order > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
  {
-   "types": "./dist/index.d.ts",
    "exports": {
@@ --- --- @@
    },
+   "main": "./dist/index.cjs",
    "module": "./dist/index.mjs",
+   "types": "./dist/index.d.ts",
    "files": [
@@ --- --- @@
    ],
-   "main": "./dist/index.cjs",
  }
`;

exports[`diffPackageJson > incorrect package.json > kitchen sink > diffs 1`] = `
[
  {
    "from": "index.js",
    "key": "main",
    "to": "./dist/index.cjs",
  },
  {
    "from": "dist/index.esm.invalid",
    "key": "module",
    "to": "./dist/index.mjs",
  },
  {
    "from": "index.d.ts",
    "key": "types",
    "to": "./dist/index.d.ts",
  },
  {
    "key": "exports",
  },
  {
    "additions": [
      "themes/apac",
    ],
    "key": "files",
  },
  {
    "key": "order",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > kitchen sink > package.json 1`] = `
{
  "exports": {
    ".": {
      "types": {
        "import": "./dist/index.d.mts",
        "require": "./dist/index.d.ts",
      },
      "import": "./dist/index.mjs",
      "require": "./dist/index.cjs",
    },
    "./css": {
      "types": {
        "import": "./dist/css.d.mts",
        "require": "./dist/css.d.ts",
      },
      "import": "./dist/css.mjs",
      "require": "./dist/css.cjs",
    },
    "./themes/apac": {
      "types": {
        "import": "./dist/themes/apac.d.mts",
        "require": "./dist/themes/apac.d.ts",
      },
      "import": "./dist/themes/apac.mjs",
      "require": "./dist/themes/apac.cjs",
    },
    "./package.json": "./package.json",
  },
  "main": "./dist/index.cjs",
  "module": "./dist/index.mjs",
  "types": "./dist/index.d.ts",
  "files": [
    "css",
    "dist",
    "extra",
    "themes/apac",
  ],
}
`;

exports[`diffPackageJson > incorrect package.json > main > diffs 1`] = `
[
  {
    "from": "index.js",
    "key": "main",
    "to": "./dist/index.cjs",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > main > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
    },
-   "main": "index.js",
+   "main": "./dist/index.cjs",
    "module": "./dist/index.mjs",
`;

exports[`diffPackageJson > incorrect package.json > module > diffs 1`] = `
[
  {
    "from": "something/else.js",
    "key": "module",
    "to": "./dist/index.mjs",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > module > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
    "main": "./dist/index.cjs",
-   "module": "something/else.js",
+   "module": "./dist/index.mjs",
    "types": "./dist/index.d.ts",
`;

exports[`diffPackageJson > incorrect package.json > sideEffects > array flag with complete overlap > diffs 1`] = `[]`;

exports[`diffPackageJson > incorrect package.json > sideEffects > array flag with complete overlap > package.json 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`diffPackageJson > incorrect package.json > sideEffects > array flag with no overlap > diffs 1`] = `
[
  {
    "additions": [
      "dist/side-effects/**",
    ],
    "key": "sideEffects",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > sideEffects > array flag with no overlap > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
    "sideEffects": [
+     "dist/side-effects/**",
      "src/reset/**",
`;

exports[`diffPackageJson > incorrect package.json > sideEffects > array flag with partial overlap > diffs 1`] = `
[
  {
    "additions": [
      "dist/css.*",
    ],
    "key": "sideEffects",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > sideEffects > array flag with partial overlap > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
    "sideEffects": [
+     "dist/css.*",
      "dist/side-effects/**",
`;

exports[`diffPackageJson > incorrect package.json > sideEffects > boolean flag false > diffs 1`] = `[]`;

exports[`diffPackageJson > incorrect package.json > sideEffects > boolean flag false > package.json 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`diffPackageJson > incorrect package.json > sideEffects > boolean flag true > diffs 1`] = `[]`;

exports[`diffPackageJson > incorrect package.json > sideEffects > boolean flag true > package.json 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`diffPackageJson > incorrect package.json > sideEffects > no flag > diffs 1`] = `[]`;

exports[`diffPackageJson > incorrect package.json > sideEffects > no flag > package.json 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`diffPackageJson > incorrect package.json > sideEffects > string flag > diffs 1`] = `
[
  {
    "additions": [
      "dist/side-effects/**",
    ],
    "key": "sideEffects",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > sideEffects > string flag > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
  {
-   "sideEffects": "src/reset/**",
+   "sideEffects": [
+     "dist/side-effects/**",
+     "src/reset/**",
+   ],
    "exports": {
`;

exports[`diffPackageJson > incorrect package.json > types > diffs 1`] = `
[
  {
    "from": undefined,
    "key": "types",
    "to": "./dist/index.d.ts",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > types > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
    "module": "./dist/index.mjs",
+   "types": "./dist/index.d.ts",
    "files": [
`;
